<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>tripleo.elijah</groupId>
		<artifactId>elijah-v2</artifactId>
		<version>0.91.1-SNAPSHOT</version>
	</parent>

	<artifactId>tripleo.elijah.core</artifactId>
	<name>elijah-core</name>
	<description>elijah-core</description>
	<packaging>jar</packaging>
	<version>0.9.1-SNAPSHOT</version>



    <properties>
        <commons-math3.version>3.6.1</commons-math3.version>
        <collections-generic.version>4.01</collections-generic.version>
        <avaitility.version>1.7.0</avaitility.version>



        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <gib.referenceBranch>refs/remotes/origin/master</gib.referenceBranch>
        <gib.skipTestsForUpstreamModules>true</gib.skipTestsForUpstreamModules>
        <gib.buildUpstream>false</gib.buildUpstream>
        <gib.failOnMissingGitDir>false</gib.failOnMissingGitDir>
        <gib.failOnError>false</gib.failOnError>
        <gib.disable>true</gib.disable>

        <!-- used only in dependency management to force this version, not included as a direct dependency -->
        <junit.version>4.13.2</junit.version>
        <assertj.version>3.21.0</assertj.version>
        <hamcrest.version>2.2</hamcrest.version>
        <hamcrest-all.version>1.3</hamcrest-all.version>
        <mockito.version>4.4.0</mockito.version>
        <byte-buddy.version>1.14.6</byte-buddy.version>

        <!-- logging -->
        <!-- overwriting in the slf4j and logback in the hibernate-jpa, spring-data-eclipselink. When updated to the latest version remove the version from that module-->
        <org.slf4j.version>1.7.32</org.slf4j.version>
        <logback.version>1.2.7</logback.version>

        <!-- plugins -->
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
        <java.version>1.8</java.version>
        <log4j.version>1.2.17</log4j.version>
        <jmh-core.version>1.36</jmh-core.version>
        <jmh-generator.version>1.36</jmh-generator.version>
        <maven-failsafe-plugin.version>2.21.0</maven-failsafe-plugin.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <commons-io.version>2.13.0</commons-io.version>
        <commons-lang.version>2.6</commons-lang.version>
        <commons-lang3.version>3.13.0</commons-lang3.version>
        <commons-cli.version>1.5.0</commons-cli.version>
        <maven-war-plugin.version>3.3.2</maven-war-plugin.version>
        <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
        <jstl-api.version>1.2</jstl-api.version>
        <javax.servlet.jsp-api.version>2.3.3</javax.servlet.jsp-api.version>
        <jstl.version>1.2</jstl.version>
        <jackson.version>2.15.2</jackson.version>
        <commons-fileupload.version>1.5</commons-fileupload.version>
        <junit-platform.version>1.9.2</junit-platform.version>
        <junit-jupiter.version>5.9.2</junit-jupiter.version>
        <junit-platform-surefire-provider.version>1.3.2</junit-platform-surefire-provider.version>
        <directory-maven-plugin.version>0.3.1</directory-maven-plugin.version>
        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
        <custom-pmd.version>0.0.1</custom-pmd.version>
        <gitflow-incremental-builder.version>3.12.2</gitflow-incremental-builder.version>
        <maven-jxr-plugin.version>3.0.0</maven-jxr-plugin.version>
        <maven-pmd-plugin.version>3.19.0</maven-pmd-plugin.version>
        <lombok.version>1.18.28</lombok.version>
        <h2.version>2.1.214</h2.version>
        <guava.version>32.1.2-jre</guava.version>
        <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>


    </properties>





	<dependencies>






        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>${commons-collections4.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>${commons-math3.version}</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>${avaitility.version}</version>
            <scope>test</scope>
        </dependency>















		<dependency>
			<groupId>tripleo.elijah</groupId>
			<artifactId>tripleo.elijah.elijah-nextgen-outputstatement</artifactId>
			<version>0.9.1-SNAPSHOT </version>
		</dependency>

<!--
		<dependency>
			<groupId>tripleo.elijah</groupId>
			<artifactId>tripleo.small</artifactId>
			<version>0.9.1-SNAPSHOT</version>
		</dependency>
-->

		<dependency>
			<groupId>tripleo.elijah</groupId>
			<artifactId>tripleo.elijah.reactive</artifactId>
			<version>0.9.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>tripleo.elijah</groupId>
			<artifactId>tripleo.elijah.stateful</artifactId>
			<version>0.9.1-SNAPSHOT</version>
			<scope>compile</scope>
		</dependency>

		<!-- https://search.maven.org/artifact/io.reactivex.rxjava3/rxjava/3.1.0/jar -->
		<dependency>
			<groupId>io.reactivex.rxjava3</groupId>
			<artifactId>rxjava</artifactId>
			<version>3.1.6</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.reactivestreams/reactive-streams -->
		<dependency>
			<groupId>org.reactivestreams</groupId>
			<artifactId>reactive-streams</artifactId>
			<version>1.0.4</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.15</version> <!-- Use 1.6 for java 1.5 -->
		</dependency>

		<!-- https://mvnrepository.com/artifact/antlr/antlr -->
		<dependency>
			<groupId>antlr</groupId>
			<artifactId>antlr</artifactId>
			<version>2.7.7</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.28</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>24.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.jdeferred.v2</groupId>
			<artifactId>jdeferred-core</artifactId>
			<version>2.0.0</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<fork>true</fork>
					<compilerArgs>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
						<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
